--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "file",
     "sharing"
   ],
-  "repository": "https://github.com/piggychaa/empat",
+  "repositori" : "https://github.com/Noval654/File4" ,
   "logo": "https://telegra.ph/file/2917f8f281acb8de7d5a7.jpg",
   "env": {
     "TG_BOT_TOKEN": {
